import React from 'react';
import { shallow } from 'enzyme';
import { ExpensesSummary } from '../../components/ExpensesSummary';

test('should render ExpensesSummary with 1 expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={1} expensesTotal={235}  />);
    expect(wrapper).toMatchSnapshot();
});

test('should render ExpensesSummary with multiples expense', () => {
    const wrapper = shallow(<ExpensesSummary expenseCount={2} expensesTotal={565} />);
    expect(wrapper).toMatchSnapshot();
});