// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`should render ExpensesSummary with multiples expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $5.65
  </h1>
</div>
`;
